Allow native access for the app
FlatLaF needs it to inject platform-specific capabilities.

This commit enables it in all flavors:
- IDEA-generated run configurations
- Application plugin's `run`
- Shadow JAR `runShadow` and the `noJRE` distribution
- jpackage-built distributions

Issue: #511